# JobMatchMini

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml
backend/: .env  Dockerfile  README.md  pyproject.toml  startup.sh
backend/api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/api/job/: __init__.py  apps.py  models_job.py  opensearch_client.py  search_indexing.py  search_views.py  serializers_job.py  signals.py  urls.py  views_job.py
backend/api/migrations/: 0001_initial.py  0002_job_jobapplication.py  0003_rename_job_title_job_company_and_more.py  0004_usercv_jobapplication_cv.py  0005_jobapplication_note.py  0006_usercv_file_name.py
backend/api/user/: __init__.py  models_user.py  serializers_cv.py  serializers_user.py  views_cv.py  views_user.py
backend/config/: asgi.py  settings.py  wsgi.py
mobile/: .env  package-lock.json  package.json
mobile/app/: _layout.tsx  auth-context.tsx  change-password.tsx  create-job.tsx  edit-job.tsx  index.tsx  job-applications.tsx  job-detail.tsx  login.tsx  my-cvs.tsx  profile.tsx  register.tsx
mobile/constants/: app-constants.ts
